<resources>
    <string name="app_name">Flickr</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="photos">Photos</string>
    <string name="favourite">Favourite</string>
    <string name="add_to_favourite_success_message">Photo has been added successfully to your favourite</string>
    <string name="remove_from_favourite_success_message">Photo has been removed successfully from your favourite</string>
    <string name="download_success_message">Photo downloaded at %s</string>
    <string name="action_failure_message">Can\'t perform this action</string>
    <string name="search_hint">Search</string>
    <string name="no_favourites_yet">No Favourites yet.</string>
    <string name="image">Image</string>
    <string name="add_photo_to_favourite">Add photo to favourite</string>
    <string name="download_photo">Download photo</string>
</resources>