...
        <variable
            name="viewModel"
            type="com.youssef.flickr.framework.presentation.features.photos.PhotosViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/photosFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".framework.presentation.features.photos.PhotosFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
...
                    android:singleLine="true"
                    android:text="@={viewModel.searchKey}"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/photosRV"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingTop="8dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
...
