...
        <variable
            name="listener"
            type="com.youssef.flickr.framework.presentation.callback.OnItemClickListener" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/itemPhotoLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="12dp"
        android:onClick="@{() -> listener.onItemClicked(photo)}"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp">
...
